[workspace]
members = ["./obrewin_ds", "./obrewin_network"]
resolver = "2"

[workspace.package]
authors = ["Minsung Kim <spongbob9876@naver.com>"]
categories = ["finance"]
edition = "2021"
homepage = "https://github.com/McDic/Obrewin"
keywords = ["trading", "finance"]
license-file = "LICENSE"
repository = "https://github.com/McDic/Obrewin"
version = "0.0.2"

[workspace.dependencies]
chrono = { version = "0.4" }
rust_decimal = { version = "1.35" }
rust_decimal_macros = { version = "1.35" }
