[workspace]
members = ["./obrewin_ds", "./obrewin_network", "./obrewin_utils"]
resolver = "2"

[workspace.package]
authors = ["Minsung Kim <spongbob9876@naver.com>"]
categories = ["finance"]
edition = "2021"
homepage = "https://github.com/McDic/Obrewin"
keywords = ["trading", "finance"]
license-file = "LICENSE"
repository = "https://github.com/McDic/Obrewin"
version = "0.0.4"

[workspace.dependencies]
anyhow = { version = "1" }
async-trait = { version = "0.1" }
axum = { version = "0.7" }
chrono = { version = "0.4" }
obrewin-data-structures = { path = "./obrewin_ds" }
obrewin-network = { path = "./obrewin_network" }
obrewin-utils = { path = "./obrewin_utils" }
reqwest = { version = "0.12" }
rust_decimal = { version = "1.35" }
rust_decimal_macros = { version = "1.35" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23" }
