[package]
name = "obrewin-data-structures"
description = "Data structures for Obrewin"
readme = "README.md"

authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "obrewin_data_structures"

[dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
