[package]
name = "obrewin-network"
description = "Networking components for Obrewin"
readme = "README.md"
version = "0.0.1"

authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }

[lib]
name = "obrewin_network"

[dependencies]
