[package]
name = "obrewin-network"
description = "Networking components for Obrewin"
readme = "README.md"

authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "obrewin_network"

[dependencies]
